deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-ddns
spec:
  replicas: 1  # Nombre de réplicas de votre application
  selector:
    matchLabels:
      app: cloudflare-ddns
  template:
    metadata:
      labels:
        app: cloudflare-ddns
    spec:
      containers:
        - name: cloudflare-ddns
          image: favonia/cloudflare-ddns:latest
          securityContext:
            readOnlyRootFilesystem: true
          resources:
            # Configurer les limites de ressources si nécessaire
      securityContext:
        fsGroup: 1000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - name: http
    protocol: TCP
    port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
  annotations:
    cert-manager.io/issuer: "issuer-letsencrypt"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
         - eductivecloud.onlymore.net
      secretName: tls-eductivecloud
  rules:
    - host: eductivecloud.onlymore.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
